Implement profile editing with image upload; add category and user management features
- Implement profile editing functionality, including image upload capability.
- Develop Categories controller with the following features:
  - Add, edit, display, and delete categories.
  - Integrate jQuery Ajax for seamless operations.
  - Utilize Toast notifications for validation and operation success/failure messages.
- Create User controller to manage users (creators and contributors):
  - Display campaign creators on the admin side.
- Design basic UI components for:
  - Adding campaigns.
  - Managing pending campaign requests.
  - Listing campaign creators.
  - Displaying categories list.

--- a/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
+++ b/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\Documents_Upload\" />
     <Folder Include="wwwroot\Campaign_Media\" />
+    <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
 </Project>
