Fix the problem while login the user , verfied the user(OTP Check Page) because of getting null values and also Implement the Google reCAPTCHA Functionality while login the user for provide security

--- a/Crowd_Funding_Platform/appsettings.json
+++ b/Crowd_Funding_Platform/appsettings.json
@@ -13,12 +13,18 @@
     "AllowedHosts": "*",
 
 
-    "SmtpSettings": {
-        "Server": "smtp.gmail.com",
-        "Port": 587,
-        "SenderEmail": "tester.devanshi29@gmail.com",
-        "SenderPassword": "npde fuqh gvqr ylln",
-        "EnableSsl": true
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "tester.devanshi29@gmail.com",
+    "SenderPassword": "npde fuqh gvqr ylln",
+    "EnableSsl": true
 
-    }
+  },
+
+  "GoogleReCAPTCHA": {
+    "SiteKey": "6LcsmP0qAAAAAIMqJepe1XNbiGei8UhTu_Tm5vNH",
+    "SecretKey": "6LcsmP0qAAAAAA4RXPo9diPlwXziJZAatZ3mzsYm"
+  }
+  
 }
