Implement the UserProfile for given option to choose for their user profile picture , manage rewards (Add/Edit , Delete ) +Implement the jQuery & Ajax validation  , implement the payment gateway using razorpay API

--- a/Crowd_Funding_Platform/appsettings.json
+++ b/Crowd_Funding_Platform/appsettings.json
@@ -25,6 +25,12 @@
   "GoogleReCAPTCHA": {
     "SiteKey": "6LdlM_4qAAAAAD6vBYVZQXwbSJ6Uqh_FrH4va-_4",
     "SecretKey": "6LdlM_4qAAAAAEg2aORFRZ2YIiJo7ijerrSuCJfy"
+  },
+
+
+  "Razorpay": {
+    "Key": "rzp_test_lP7c4T9H5YGiXt",
+    "Secret": "FGjFH8q4GM1Ogr12F0IdYZfj"
   }
-  
-}
+
+  }
