--- a/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
+++ b/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
@@ -29,11 +29,13 @@
     <PackageReference Include="MimeKit" Version="4.9.0" />
     <PackageReference Include="RazorPay.Core" Version="1.0.2" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\Documents_Upload\" />
     <Folder Include="wwwroot\Campaign_Media\" />
+    <Folder Include="wwwroot\Campaign_Gallery\" />
   </ItemGroup>
 
 </Project>
