--- a/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
+++ b/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="MimeKit" Version="4.9.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RazorPay.Core" Version="1.0.2" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
@@ -36,6 +37,7 @@
     <Folder Include="wwwroot\Documents_Upload\" />
     <Folder Include="wwwroot\Campaign_Media\" />
     <Folder Include="wwwroot\Campaign_Gallery\" />
+    <Folder Include="wwwroot\Certificates\" />
   </ItemGroup>
 
 </Project>
