Implement the audit logs ,integrate the rewards system for the creators , Implement the export excel & pdfs in all reports , Give proper navigations & set dynamic data on the Landing page , implement the loader  while payment is processing

--- a/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
+++ b/Crowd_Funding_Platform/Crowd_Funding_Platform.csproj
@@ -40,6 +40,7 @@
     <Folder Include="wwwroot\Campaign_Media\" />
     <Folder Include="wwwroot\Campaign_Gallery\" />
     <Folder Include="wwwroot\Certificates\" />
+    <Folder Include="wwwroot\CreatorCertificates\" />
   </ItemGroup>
 
 </Project>
